breadth search without alloc